<resources>
    <string name="app_name">DevJobTracker</string>
    <string name="offer_name">Offer Name</string>
    <string name="more_info">More Info</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="full_time">Full Time</string>
    <string name="search_hint">Search</string>
    <string name="logo">logo</string>
    <string name="allMenu">Menu</string>
<<<<<<< HEAD
    <string name="offer_location">location</string>
    <string name="type">Full Time</string>
    <string name="description">Job Offer Description</string>
=======
    <string name="description">Description</string>
    <string name="notFound">No job found ...</string>
>>>>>>> develop
</resources>
